// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AccountVerificationRequestTableComponent > should display account verification requests table 1`] = `
<tm-account-verification-request-table
  accountService={[Function _AccountService]}
  accountVerificationRequests={[Function Array]}
  isApprovingAccountVerificationRequest={[Function Array]}
  navigationService={[Function _NavigationService]}
  statusMessageService={[Function _StatusMessageService]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        Pending Account Verification Requests
      </strong>
    </div>
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped"
        id="search-table-account-verification-request"
      >
        <thead>
          <tr>
            <th
              class="text-nowrap"
            >
              Name
            </th>
            <th
              class="text-nowrap"
            >
              Email
            </th>
            <th
              class="text-nowrap"
            >
              Status
            </th>
            <th
              class="text-nowrap"
            >
              Institute
            </th>
            <th
              class="text-nowrap"
            >
              Country
            </th>
            <th
              class="text-nowrap"
            >
              Submitted At
            </th>
            <th
              class="text-nowrap"
            >
              Comments
            </th>
            <th
              class="text-nowrap"
            >
              Options
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              name
            </td>
            <td>
              email
            </td>
            <td>
              PENDING
            </td>
            <td>
              institute
            </td>
            <td>
            </td>
            <td
              class="text-nowrap"
            >
              Tue, 08 Feb 2022, 08:23 AM +00:00
            </td>
            <td>
              <div
                class="text-truncate"
                style="max-width: 20rem;"
              >
                 comment 
              </div>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="d-flex gap-2 justify-content-center"
              >
                <button
                  class="btn btn-success"
                  id="approve-account-verification-request-0"
                >
                   Approve 
                </button>
                <button
                  class="btn btn-warning"
                  id="review-account-verification-request-0"
                >
                   Review 
                </button>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              name
            </td>
            <td>
              email
            </td>
            <td>
              PENDING
            </td>
            <td>
              institute
            </td>
            <td>
            </td>
            <td
              class="text-nowrap"
            >
              Tue, 08 Feb 2022, 08:23 AM +00:00
            </td>
            <td>
              <div
                class="text-truncate"
                style="max-width: 20rem;"
              >
                 comment 
              </div>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="d-flex gap-2 justify-content-center"
              >
                <button
                  class="btn btn-success"
                  id="approve-account-verification-request-1"
                >
                   Approve 
                </button>
                <button
                  class="btn btn-warning"
                  id="review-account-verification-request-1"
                >
                   Review 
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-account-verification-request-table>
`;

exports[`AccountVerificationRequestTableComponent > should snap with an account verification requests table 1`] = `
<tm-account-verification-request-table
  accountService={[Function _AccountService]}
  accountVerificationRequests={[Function Array]}
  isApprovingAccountVerificationRequest={[Function Array]}
  navigationService={[Function _NavigationService]}
  statusMessageService={[Function _StatusMessageService]}
>
  <div
    class="card bg-light top-padded"
  >
    <div
      class="card-header bg-primary text-white"
    >
      <strong>
        Pending Account Verification Requests
      </strong>
    </div>
    <div
      class="table-responsive"
    >
      <table
        class="table table-striped"
        id="search-table-account-verification-request"
      >
        <thead>
          <tr>
            <th
              class="text-nowrap"
            >
              Name
            </th>
            <th
              class="text-nowrap"
            >
              Email
            </th>
            <th
              class="text-nowrap"
            >
              Status
            </th>
            <th
              class="text-nowrap"
            >
              Institute
            </th>
            <th
              class="text-nowrap"
            >
              Country
            </th>
            <th
              class="text-nowrap"
            >
              Submitted At
            </th>
            <th
              class="text-nowrap"
            >
              Comments
            </th>
            <th
              class="text-nowrap"
            >
              Options
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              name
            </td>
            <td>
              email
            </td>
            <td>
              PENDING
            </td>
            <td>
              institute
            </td>
            <td>
            </td>
            <td
              class="text-nowrap"
            >
              Tue, 08 Feb 2022, 08:23 AM +00:00
            </td>
            <td>
              <div
                class="text-truncate"
                style="max-width: 20rem;"
              >
                 comment 
              </div>
            </td>
            <td
              class="align-middle"
            >
              <div
                class="d-flex gap-2 justify-content-center"
              >
                <button
                  class="btn btn-success"
                  id="approve-account-verification-request-0"
                >
                   Approve 
                </button>
                <button
                  class="btn btn-warning"
                  id="review-account-verification-request-0"
                >
                   Review 
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</tm-account-verification-request-table>
`;
